cloudformation/create-vpc.json
{
  "Parameters": {
    "Environment": {
      "Type": "String",
      "Description": "The environment resources are going to be launched in"
    },
    "Ec2LaunchTemplateName": {
      "Type": "String",
      "Description": "The name of the EC2 Launch Template to create"
    }
  },
  "Resources": {
    "VPC1": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "Tags": [
          {
            "Key": "Name",
            "Value": "VPC-1"
          },
          {
            "Key": "Environment",
            "Value": {
              "Ref": "Environment"
            }
          }
        ]
      }
    },
    "SecurityGroup1": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupName": "ssh-only-all-input-sources",
        "GroupDescription": "Allows only SSH at port 22 from any input source, public or private",
        "SecurityGroupIngress": {
          "CidrIp": "0.0.0.0/0",
          "Description": "Any public or private IP",
          "FromPort": 22,
          "IpProtocol": "TCP",
          "ToPort": 22
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "ssh-only-all-input-sources"
          },
          {
            "Key": "Environment",
            "Value": {
              "Ref": "Environment"
            }
          }
        ],
        "VpcId": {
          "Ref": "VPC1"
        }
      }
    },
    "Subnet1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VPC1"
        },
        "AvailabilityZone": "eu-north-1a",
        "CidrBlock": "10.0.0.0/24",
        "Tags": [
          {
            "Key": "Name",
            "Value": "subnet-1"
          },
          {
            "Key": "Environment",
            "Value": {
              "Ref": "Environment"
            }
          }
        ]
      }
    },
    "Subnet2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VPC1"
        },
        "AvailabilityZone": "eu-north-1b",
        "CidrBlock": "10.0.1.0/24",
        "Tags": [
          {
            "Key": "Name",
            "Value": "subnet-2"
          },
          {
            "Key": "Environment",
            "Value": {
              "Ref": "Environment"
            }
          }
        ]
      }
    },
    "Subnet3": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VPC1"
        },
        "AvailabilityZone": "eu-north-1c",
        "CidrBlock": "10.0.2.0/24",
        "Tags": [
          {
            "Key": "Name",
            "Value": "subnet-3"
          },
          {
            "Key": "Environment",
            "Value": {
              "Ref": "Environment"
            }
          }
        ]
      }
    },
    "InternetGateway": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "InternetGatewayVPC1"
          },
          {
            "Key": "Environment",
            "Value": {"Ref": "Environment"}
          }
        ]
      }
    },
    "InternetGatewayAttachment": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "InternetGatewayId": {"Ref": "InternetGateway"},
        "VpcId": {"Ref": "VPC1"}
      }
    },
    "RouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {"Ref": "VPC1"},
        "Tags": [
          {
            "Key": "Name",
            "Value": "RouteTable"
          },
          {
            "Key": "Environment",
            "Value": {"Ref": "Environment"}
          }
        ]
      }
    },
    "RouteToInternetGateway": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {"Ref": "InternetGateway"},
        "RouteTableId": {"Ref": "RouteTable"}
      }
    },
    "Subnet1ToInternetGateway": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {"Ref": "Subnet1"},
        "RouteTableId": {"Ref": "RouteTable"}
      }
    },
    "Subnet2ToInternetGateway": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {"Ref": "Subnet2"},
        "RouteTableId": {"Ref": "RouteTable"}
      }
    },
    "Subnet3ToInternetGateway": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {"Ref": "Subnet3"},
        "RouteTableId": {"Ref": "RouteTable"}
      }
    },
    "Ec2LaunchTemplate": {
      "Type": "AWS::EC2::LaunchTemplate",
      "Properties": {
        "LaunchTemplateName": {
          "Ref": "Ec2LaunchTemplateName"
        },
        "LaunchTemplateData": {
          "TagSpecifications": [
            {
              "ResourceType": "instance",
              "Tags": [
                {
                  "Key": "Environment",
                  "Value": {
                    "Ref": "Environment"
                  }
                }
              ]
            }
          ],
          "EbsOptimized": false,
          "NetworkInterfaces": [
            {
              "AssociatePublicIpAddress": true,
              "DeleteOnTermination": true,
              "Description": "Primary network interface",
              "DeviceIndex": 0,
              "Groups": [
                {"Ref": "SecurityGroup1"}
              ],
              "Ipv6Addresses": []
            }
          ],
          "ImageId": "ami-5e9c1520",
          "KeyName": "ec2-demo-2",
          "Monitoring": {
            "Enabled": false
          },
          "Placement": {
            "GroupName": "",
            "Tenancy": "default"
          },
          "CapacityReservationSpecification": {
            "CapacityReservationPreference": "none"
          },
          "HibernationOptions": {
            "Configured": false
          },
          "UserData": "IyEvdXNyL2Jpbi9lbnYgYmFzaApzb3VyY2UgL2V0Yy9sc2ItcmVsZWFzZQp3Z2V0IGh0dHBzOi8vYXB0LnB1cHBldGxhYnMuY29tL3B1cHBldDUtcmVsZWFzZS0ke0RJU1RSSUJfQ09ERU5BTUV9LmRlYgpkcGtnIC1pIHB1cHBldDUtcmVsZWFzZS0ke0RJU1RSSUJfQ09ERU5BTUV9LmRlYgphcHQtZ2V0IHVwZGF0ZQphcHQtZ2V0IC15IGluc3RhbGwgZ2NjIG1ha2UgZ2l0CmFwdC1nZXQgLXkgaW5zdGFsbCBwdXBwZXQtYWdlbnQKZWNobyAnRGVmYXVsdHMgICAgICAgIHNlY3VyZV9wYXRoPSIvdXNyL2xvY2FsL3NiaW46L3Vzci9sb2NhbC9iaW46L3Vzci9zYmluOi91c3IvYmluOi9zYmluOi9iaW46L3NuYXAvYmluOi9vcHQvcHVwc [...]
        }
      }
    }
  },
  "Outputs": {
    "VpcId": {
      "Description": "The VPC ID Created",
      "Value": {
        "Ref": "VPC1"
      },
      "Export": {
        "Name": {"Fn::Sub": "${AWS::StackName}-VpcZookeepersId"}
      }
    },
    "EC2LaunchTemplate": {
      "Description": "The EC2 Launch Template to use to launch EC2 machines for zookeeper servers",
      "Value": {
        "Ref": "Ec2LaunchTemplate"
      },
      "Export": {
        "Name": {"Fn::Sub": "${AWS::StackName}-EC2LaunchTemplateForZookeepers"}
      }
    }
  }
}
